; ModuleID = '/home/carl/AnghaBench/tengine/src/os/unix/extr_ngx_files.c_ngx_lock_fd.c'
source_filename = "/home/carl/AnghaBench/tengine/src/os/unix/extr_ngx_files.c_ngx_lock_fd.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.flock = type { i32, i32 }

@F_WRLCK = common dso_local global i32 0, align 4
@SEEK_SET = common dso_local global i32 0, align 4
@F_SETLKW = common dso_local global i32 0, align 4
@ngx_errno = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ngx_lock_fd(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca %struct.flock, align 4
  store i32 %0, i32* %3, align 4
  %5 = call i32 @ngx_memzero(%struct.flock* %4, i32 8)
  %6 = load i32, i32* @F_WRLCK, align 4
  %7 = getelementptr inbounds %struct.flock, %struct.flock* %4, i32 0, i32 1
  store i32 %6, i32* %7, align 4
  %8 = load i32, i32* @SEEK_SET, align 4
  %9 = getelementptr inbounds %struct.flock, %struct.flock* %4, i32 0, i32 0
  store i32 %8, i32* %9, align 4
  %10 = load i32, i32* %3, align 4
  %11 = load i32, i32* @F_SETLKW, align 4
  %12 = call i32 @fcntl(i32 %10, i32 %11, %struct.flock* %4)
  %13 = icmp eq i32 %12, -1
  br i1 %13, label %14, label %16

14:                                               ; preds = %1
  %15 = load i32, i32* @ngx_errno, align 4
  store i32 %15, i32* %2, align 4
  br label %17

16:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  br label %17

17:                                               ; preds = %16, %14
  %18 = load i32, i32* %2, align 4
  ret i32 %18
}

declare dso_local i32 @ngx_memzero(%struct.flock*, i32) #1

declare dso_local i32 @fcntl(i32, i32, %struct.flock*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
